--- a/appointments.html
+++ b/appointments.html
@@ -120,7 +120,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item"><a href="visa-list.html">Visa</a></li>
-                                    <li class="menu-item"><a href="services-1.html">Services</a> </li>                              
+                                    <li class="menu-item"><a href="services.html">Services</a> </li>                              
                                     <li class="menu-item"><a href="blog-grid.html">Blog</a></li>
                                     <li class="menu-item"><a href="contact-1.html">Contact</a></li>
                                 </ul>
@@ -211,7 +211,7 @@
                                 <div class="wptb-item--inner">
                                     <h6 class="wptb-item--subtitle">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="12" viewBox="0 0 16 12" fill="none">
-                                            <path d="M14.9119 0.107265L0.787131 5.08487C0.559931 5.16487 0.509531 5.36087 0.779131 5.46806L3.81593 6.68486L5.61593 7.40566L14.4031 0.952865C14.5215 0.866465 14.6575 1.02886 14.5719 1.12166L8.27513 7.93207V7.93366L7.91353 8.33607L8.39273 8.59367L12.3783 10.7393C12.6111 10.8641 12.9127 10.7609 12.9799 10.4721L15.3047 0.452065C15.3679 0.177665 15.1863 0.0104648 14.9119 0.107265ZM5.59993 11.7297C5.59993 11.9265 5.71113 11.9817 5.86473 11.8425C6.06553 11.6593 8.14473 9.79366 8.14473 9.79366L5.59993 8.47847V11.7297Z" fill="#E13833"/>
+                                            <path d="M14.9119 0.107265L0.787131 5.08487C0.559931 5.16487 0.509531 5.36087 0.779131 5.46806L3.81593 6.68486L5.61593 7.40566L14.4031 0.952865C14.5215 0.866465 14.6575 1.02886 14.5719 1.12166L8.27513 7.93207V7.93366L7.91353 8.33607L8.39273 8.59367L12.3783 10.7393C12.6111 10.8641 12.9127 10.7609 12.9799 10.4721L15.3047 0.452065C15.3679 0.177665 15.1863 0.0104648 14.9119 0.107265ZM5.59993 11.7297C5.59993 11.9265 5.71113 11.9817 5.86473 11.8425C6.06553 11.6593 8.14473 9.79366 8.14473 9.79366L5.59993 8.47847V11.7297Z" fill="#00C6F7"/>
                                         </svg>
                                         Make Appointment
                                     </h6>
