--- a/contact-1.html
+++ b/contact-1.html
@@ -120,7 +120,7 @@
                                 </ul>
                             </li>
                             <li class="menu-item"><a href="visa-list.html">Visa</a></li>
-                            <li class="menu-item"><a href="services-1.html">Services</a> </li>                              
+                            <li class="menu-item"><a href="services.html">Services</a> </li>                              
                             <li class="menu-item"><a href="blog-grid.html">Blog</a></li>
                             <li class="menu-item"><a href="contact-1.html">Contact</a></li>
                         </ul>
