--- a/contact-2.html
+++ b/contact-2.html
@@ -161,7 +161,7 @@
                                     </li>
                                     <li class="menu-item menu-item-has-children"><a href="#">Services</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item"><a href="services-1.html">Service One</a></li>
+                                            <li class="menu-item"><a href="services.html">Service One</a></li>
                                             <li class="menu-item"><a href="services-2.html">Service Two</a></li>
                                             <li class="menu-item"><a href="service-details.html">Service Details</a></li>
                                         </ul>
