--- a/faq.html
+++ b/faq.html
@@ -437,7 +437,7 @@
                         <div class="footer-nav-bottom">
                             <ul>
                                 <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Term of Use</a></li>
+                                <li><a href="terms.html">Term of Use</a></li>
                                 <li><a href="#">Support</a></li>
                             </ul>
                         </div>
