--- a/services.html
+++ b/services.html
@@ -587,7 +587,7 @@
                         <div class="footer-nav-bottom">
                             <ul>
                                 <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Term of Use</a></li>
+                                <li><a href="terms.html">Term of Use</a></li>
                                 <li><a href="#">Support</a></li>
                             </ul>
                         </div>
