--- a/terms.html
+++ b/terms.html
@@ -186,7 +186,7 @@
                             <ol class="terms">
                                 <li>
                                     <h6> Services:</h6>
-                                    Blue height travels offers consulting services for students seeking education opportunities abroad.
+                                    Blue Height Travels offers consulting services for students seeking education opportunities abroad.
                                     Our services include advising on course selection, application process, visa assistance, and related guidance.
                                 </li>
                                 <li>
@@ -201,7 +201,7 @@
                                 </li>
                                 <li>
                                     <h6>Confidentiality:</h6>
-                                    Blue height travels ensures the confidentiality of client information.
+                                    Blue Height Travels ensures the confidentiality of client information.
                                     Client information will only be shared with relevant authorities as required by law.
                                 </li>
                                 <li>
@@ -329,9 +329,9 @@
                                                 <li class="menu-item"><a href="timeline.html"><i class="bi bi-circle-fill"></i> Our Experience</a></li>
                                                 <li class="menu-item"><a href="case.html"><i class="bi bi-circle-fill"></i> Case Studies</a></li>
                                                 <li class="menu-item"><a href="#"><i class="bi bi-circle-fill"></i> Travel Insurance</a></li>
-                                                <li class="menu-item"><a href="appointments.html"><i class="bi bi-circle-fill"></i> Get Appointment</a></li>
+                                                <li class="menu-item"><a href="contact.html"><i class="bi bi-circle-fill"></i> Get Appointment</a></li>
                                                 <li class="menu-item"><a href="#"><i class="bi bi-circle-fill"></i> Cost Calculation</a></li>
-                                                <li class="menu-item"><a href="contact-1.html"><i class="bi bi-circle-fill"></i> Contact Us</a></li>
+                                                <li class="menu-item"><a href="contact.html"><i class="bi bi-circle-fill"></i> Contact Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
