--- a/work-process.html
+++ b/work-process.html
@@ -379,9 +379,9 @@
                                                 <li class="menu-item"><a href="timeline.html"><i class="bi bi-circle-fill"></i> Our Experience</a></li>
                                                 <li class="menu-item"><a href="case.html"><i class="bi bi-circle-fill"></i> Case Studies</a></li>
                                                 <li class="menu-item"><a href="#"><i class="bi bi-circle-fill"></i> Travel Insurance</a></li>
-                                                <li class="menu-item"><a href="appointments.html"><i class="bi bi-circle-fill"></i> Get Appointment</a></li>
+                                                <li class="menu-item"><a href="contact.html"><i class="bi bi-circle-fill"></i> Get Appointment</a></li>
                                                 <li class="menu-item"><a href="#"><i class="bi bi-circle-fill"></i> Cost Calculation</a></li>
-                                                <li class="menu-item"><a href="contact-1.html"><i class="bi bi-circle-fill"></i> Contact Us</a></li>
+                                                <li class="menu-item"><a href="contact.html"><i class="bi bi-circle-fill"></i> Contact Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
