--- a/services.html
+++ b/services.html
@@ -6,9 +6,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <meta name="description" content="">
-        <meta name="author" content="">
-
+        <meta name="description" content="Blue height travel is a travel abroad consulting firm in Nigeria.We specialize in providing seamless travel experience as well as international study abroad services. We have an impressive track record of successfully helping students study abroad, as well as help family get a tourist visa.">
+        <meta name="author" content="Blue Height Travel">
+        <meta name="keywords" content="travel agency, agency, visa, visa application,tourism, blue height travel">
+        
+        <link rel="shortcut icon" type="image/x-icon" href="https://travellers-ebon.vercel.app/assets/img/black_logo.png">
+        <meta property="og:image" content="https://travellers-ebon.vercel.app/assets/img/black_logo.png" />
         <!-- Favicon and touch Icons -->
         <link href="assets/img/favicon.png" rel="shortcut icon" type="image/png">
         <link href="assets/img/apple-touch-icon.html" rel="apple-touch-icon">
