--- a/index.html
+++ b/index.html
@@ -1067,10 +1067,9 @@
 
 
             <!-- Clients Logo -->
-            <div class="wptb-partners-one bg-image" style="background-image: url('assets/img/background/bg-8.jpg');">    
+            <!-- <div class="wptb-partners-one bg-image" style="background-image: url('assets/img/background/bg-8.jpg');">    
                 <div class="container">    
-                    <div class="swiper-container swiper-clients">    
-                        <!-- swiper slides -->
+                    <div class="swiper-container swiper-clients"> 
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="wptb-partner--image1">
@@ -1135,10 +1134,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- !swiper slides -->
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Blog Grid -->
             <!-- <section class="wptb-blog-grid-one">
