--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                                     </div>
 
                                     <div class="wptb-item--button">
-                                        <a class="btn--readmore" href="contact-1.html">
+                                        <a class="btn--readmore" href="contact.html">
                                             <span class="btn-readmore--text"> Contact Us </span>
                                         </a>
                                     </div>
