--- a/work-process.html
+++ b/work-process.html
@@ -360,7 +360,7 @@
                                 </div>
                             </div>
 
-                            <a href="contact-1.html" class="btn mt-4">
+                            <a href="contact.html" class="btn mt-4">
                                 <span class="btn-wrap">
                                     <span class="text-first">Get Consultancy</span>
                                     <span class="text-second">Get Consultancy</span>
