--- a/blog-details.html
+++ b/blog-details.html
@@ -175,7 +175,7 @@
                                     </li>
                                     <li class="menu-item menu-item-has-children"><a href="#">Contact</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item"><a href="contact-1.html">Contact One</a></li>
+                                            <li class="menu-item"><a href="contact.html">Contact One</a></li>
                                             <li class="menu-item"><a href="contact-2.html">Contact Two</a></li>
                                         </ul>
                                     </li>
@@ -638,7 +638,7 @@
                                 </div>
                             </div>
 
-                            <a href="contact-1.html" class="btn mt-4">
+                            <a href="contact.html" class="btn mt-4">
                                 <span class="btn-wrap">
                                     <span class="text-first">Get Consultancy</span>
                                     <span class="text-second">Get Consultancy</span>
