--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                                     </div>
 
                                     <div class="wptb-item--button">
-                                        <a class="btn--readmore" href="contact-1.html">
+                                        <a class="btn--readmore" href="contact.html">
                                             <span class="btn-readmore--text"> Contact Us </span>
                                         </a>
                                     </div>
@@ -727,7 +727,7 @@
                                     </div>
 
                                     <div class="wptb-item--button">
-                                        <a class="btn--readmore" href="contact-1.html">
+                                        <a class="btn--readmore" href="contact.html">
                                             <span class="btn-readmore--text"> Contact Us </span>
                                         </a>
                                     </div>
@@ -805,7 +805,7 @@
                                     </div>
 
                                     <div class="wptb-item--button">
-                                        <a class="btn--readmore" href="contact-1.html">
+                                        <a class="btn--readmore" href="contact.html">
                                             <span class="btn-readmore--text"> Contact Us </span>
                                         </a>
                                     </div>
@@ -883,7 +883,7 @@
                                     </div>
 
                                     <div class="wptb-item--button">
-                                        <a class="btn--readmore" href="contact-1.html">
+                                        <a class="btn--readmore" href="contact.html">
                                             <span class="btn-readmore--text"> Contact Us </span>
                                         </a>
                                     </div>
@@ -961,7 +961,7 @@
                                     </div>
 
                                     <div class="wptb-item--button">
-                                        <a class="btn--readmore" href="contact-1.html">
+                                        <a class="btn--readmore" href="contact.html">
                                             <span class="btn-readmore--text"> Contact Us </span>
                                         </a>
                                     </div>
