--- a/index.html
+++ b/index.html
@@ -388,15 +388,15 @@
                             <div class="wptb-image-box2 wow fadeInLeft">
                                 <div class="wptb-item--inner">
                                     <div class="wptb-item--image order-lg-2">
-                                        <a href="#" class="wptb-item-link"><img src="assets/img/services/8.jpg" alt="img"></a>
+                                        <a href="service.html" class="wptb-item-link"><img src="assets/img/services/8.jpg" alt="img"></a>
                                     </div>
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--icon">
                                             <img src="assets/img/services/icon-11.png" alt="icon">
                                         </div>
-                                        <h6 class="wptb-item--category"><a href="#">Student advisory </a></h6>
-                                        <h4 class="wptb-item--title"><a href="#">Student Visa Processing</a></h4>
+                                        <h6 class="wptb-item--category"><a href="service.html">Student advisory </a></h6>
+                                        <h4 class="wptb-item--title"><a href="service.html">Student Visa Processing</a></h4>
                                         <p class="wptb-item--description"> 
                                             Our student advisory services provide comprehensive guidance and
                                             support to help students plan their trips effectively.
@@ -415,15 +415,15 @@
                             <div class="wptb-image-box2 active highlight wow fadeInLeft">
                                 <div class="wptb-item--inner">
                                     <div class="wptb-item--image">
-                                        <a href="#" class="wptb-item-link"><img src="assets/img/services/9.jpg" alt="img"></a>
+                                        <a href="service.html" class="wptb-item-link"><img src="assets/img/services/9.jpg" alt="img"></a>
                                     </div>
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--icon">
                                             <img src="assets/img/services/icon-12.png" alt="icon">
                                         </div>
-                                        <h6 class="wptb-item--category"><a href="#">Tourist visa application </a></h6>
-                                        <h4 class="wptb-item--title"><a href="#">Tourist visa processing</a></h4>
+                                        <h6 class="wptb-item--category"><a href="service.html">Tourist visa application </a></h6>
+                                        <h4 class="wptb-item--title"><a href="service.html">Tourist visa processing</a></h4>
                                         <p class="wptb-item--description"> 
                                             Our knowledgeable team guides you through every step of the application, 
                                             from gathering the required documents to completing the necessary forms accurately and efficiently. 
@@ -443,21 +443,21 @@
                             <div class="wptb-image-box2 wow fadeInLeft">
                                 <div class="wptb-item--inner">
                                     <div class="wptb-item--image order-lg-2">
-                                        <a href="#" class="wptb-item-link"><img src="assets/img/services/7.jpg" alt="img"></a>
+                                        <a href="service.html" class="wptb-item-link"><img src="assets/img/services/7.jpg" alt="img"></a>
                                     </div>
 
                                     <div class="wptb-item--holder">
                                         <div class="wptb-item--icon">
                                             <img src="assets/img/services/icon-13.png" alt="icon">
                                         </div>
-                                        <h6 class="wptb-item--category"><a href="#">Visa Processing</a></h6>
-                                        <h4 class="wptb-item--title"><a href="#">Visa Processing</a></h4>
+                                        <h6 class="wptb-item--category"><a href="service.html">Visa Processing</a></h6>
+                                        <h4 class="wptb-item--title"><a href="service.html">Visa Processing</a></h4>
                                         <p class="wptb-item--description"> 
                                             Our experienced team handles the entire visa application process on your behalf, 
                                             from gathering the required documentation to submitting the application and tracking its progress.
                                         </p>
                                         <div class="wptb-item--button">
-                                            <a class="btn--readmore" href="service-details.html">
+                                            <a class="btn--readmore" href="service.html">
                                                 <span class="btn-readmore--text"> View More </span>
                                                 <span class="btn-readmore--icon"> <i class="bi bi-arrow-right"></i> </span>
                                             </a>
@@ -467,8 +467,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- At our travel agency, we offer efficient and reliable visa processing services to streamline your travel preparations. -->
-                    
                     <div class="wptb-funfacts-two">
                         <div class="row">
                             <div class="col-md-3 col-sm-6">
