--- a/work-process.html
+++ b/work-process.html
@@ -80,7 +80,7 @@
                         <div class="right-box d-flex align-items-center">
                             <ul class="info-list">
                                 <li><a href="mailto:Blue Height Consult@gmail.com"><span class="icon bi bi-envelope-fill"></span>Blue Height Consult@gmail.com</a></li>
-                                <li><a href="#"><span class="icon bi bi-geo-alt-fill"></span>231 madison Street, NewYork,USA</a></li>
+                                <li><a href="#"><span class="icon bi bi-geo-alt-fill"></span>12, Boundary Road, off Airport Road, GRA, Benin City, Edo State.</a></li>
                             </ul>
 
                             <!-- Button Box -->
