--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                             <div class="social-box">
                                 <ul>
                                     <li><a href="https://www.facebook.com/" class="bi bi-facebook"></a></li>
-                                    <li><a href="https://www.instagram.com/" class="bi bi-instagram"></a></li>
+                                    <li><a href="https://www.instagram.com/p/C39_l39oEXc/?igsh=MTFkeXVqdTNscGlrbg==" class="bi bi-instagram"></a></li>
                                     <li><a href="https://www.twitter.com/" class="bi bi-twitter-x"></a></li>
                                     <li><a href="https://www.linkedin.com/" class="bi bi-linkedin"></a></li>
                                     <li><a href="https://www.behance.com/" class="bi bi-behance"></a></li>
@@ -91,8 +91,8 @@
                                 <a href="tel:+176845399" class="btn active clearfix">
                                     <span><img src="assets/img/icon_chat.png" alt="chat icon"></span>
                                     <span class="btn-wrap">
-                                        <span class="text-first">+1 768 453 99</span>
-                                        <span class="text-second">+1 768 453 99</span>
+                                        <span class="text-first">+234 913 864 0554</span>
+                                        <span class="text-second">+234 913 864 0554</span>
                                     </span>
                                 </a>
                             </div>
@@ -354,7 +354,7 @@
                                 <div class="social-box">
                                     <ul>
                                         <li><a href="https://www.facebook.com/" class="bi bi-facebook"></a></li>
-                                        <li><a href="https://www.instagram.com/" class="bi bi-instagram"></a></li>
+                                        <li><a href="https://www.instagram.com/p/C39_l39oEXc/?igsh=MTFkeXVqdTNscGlrbg==" class="bi bi-instagram"></a></li>
                                         <li><a href="https://www.linkedin.com/" class="bi bi-linkedin"></a></li>
                                         <li><a href="https://www.behance.com/" class="bi bi-behance"></a></li>
                                     </ul>
